--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -10,3 +10,5 @@ easy_admin:
             class: App\Entity\Statute
       User:
             class: App\Entity\User
+      Retailer:
+            class: App\Entity\Retailer
