update to new data format, add maker bundle

--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,9 @@
         "symfony/yaml": "^3.3"
     },
     "require-dev": {
+        "symfony/dotenv": "^3.3",
         "symfony/flex": "^1.0",
-        "symfony/dotenv": "^3.3"
+        "symfony/maker-bundle": "^1.11"
     },
     "config": {
         "preferred-install": {
